Fixed images clipping onto buttons, updated text for consistency

--- a/Fatherboard/public/css/home.css
+++ b/Fatherboard/public/css/home.css
@@ -92,6 +92,7 @@ body {
 .top-product-content .top-product-details {
     align-items: center;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .top-product-details h3 {
